fix: Stop window from overflowing on narrow monitors

--- a/components/layout/Header.module.scss
+++ b/components/layout/Header.module.scss
@@ -1,5 +1,5 @@
 .header {
-    width: 100vw;
+    width: calc(100vw - 20px);
     height: var(--header-height);
 
     background-color: var(--color-neutral-300);
