--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -3,7 +3,7 @@
     --footer-height: 35px;
 
     main {
-        width: 100vw;
+        width: calc(100vw - 20px);
         padding-top: 1rem;
         min-height: calc(100vh - var(--header-height) - var(--footer-height));
         padding-bottom: 50px;
